修复歌曲播放结束之后跳到下一首歌出现的bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             android:process="com.kevinwangy.simpleplayer.service"
         />
 
+        <service android:name=".service.NotificationService"/>
+
         <receiver
             android:name=".widget.MusicWidgetProvider"
             android:exported="true"
